<resources>
    <string name="app_name">MyNews</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="namesPagesViewPager">
        <item name="navigation_drawer_top_stories">@string/navigation_drawer_top_stories</item>
        <item name="navigation_drawer_most_popular">@string/navigation_drawer_most_popular</item>
        <item name="navigation_drawer_business">@string/navigation_drawer_business</item>
    </string-array>

    <string name="navigation_drawer_top_stories">Top Stories</string>
    <string name="navigation_drawer_most_popular">Most Popular</string>
    <string name="navigation_drawer_business">Business</string>
    <string name="navigation_drawer_search">Search</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_notifications">Notifications</string>
    <string name="navigation_drawer_help">Help</string>
    <string name="navigation_drawer_about">About</string>

    <!-- Search articles text -->
    <string name="edittext_hint">Search query term</string>
    <string name="edittext_begin_date">Begin Date</string>
    <string name="edittext_end_date">End Date</string>
    <string name="checkbox_arts">Arts</string>
    <string name="checkbox_politics">Politics</string>
    <string name="checkbox_business">Business</string>
    <string name="checkbox_sports">Sports</string>
    <string name="checkbox_entrepreneurs">Entrepreneurs</string>
    <string name="checkbox_travel">Travel</string>
    <string name="button_search">Search</string>

    <!-- Help activity text -->
    <string name="help_text_view">MyNews is rather simple to use so there is no particular help on its use. However, if you encounter a problem or a bug do not hesitate to tell me by using the form below.</string>
    <string name="help_label_subject">Subject</string>
    <string name="help_edit_text_hint">Describe your problem here</string>
    <string name="help_text_button_submit">Submit</string>

    <!-- About activity text -->
    <string name="about_text_view_developed_by">MyNews was developed by Adrien Deguffroy.</string>
    <string name="about_link_github">https://github.com/Teckosss</string>
    <string name="about_purpose">The main purpose is to make an application recovering data via an API and secure it through unit and interface testing.</string>
    <string name="about_project_from">This app is a project of the OpenClassRooms Android Application Developer Course.</string>
    <string name="about_link_path">https://openclassrooms.com/paths/89-developpeur-dapplication-android</string>

    <!-- Notifications text -->
    <string name="notifications_text">Enable notifications (once per day)</string>

</resources>
