<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single"
        android:id="@+id/nav_drawer_top_menu"
        >
        <item
            android:id="@+id/activity_main_drawer_top_stories"
            android:icon="@drawable/ic_dashboard_white_24dp"
            android:title="@string/navigation_drawer_top_stories" />
        <item
            android:id="@+id/activity_main_drawer_most_popular"
            android:icon="@drawable/ic_account_box_white_24dp"
            android:title="@string/navigation_drawer_most_popular" />
        <item
            android:id="@+id/activity_main_drawer_business"
            android:icon="@drawable/ic_settings_applications_white_24dp"
            android:title="@string/navigation_drawer_business" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/nav_drawer_middle_menu"
        >
        <item
            android:id="@+id/activity_main_drawer_search"
            android:icon="@drawable/baseline_search_white_24"
            android:title="@string/navigation_drawer_search" />
        <item
            android:id="@+id/activity_main_drawer_notifs"
            android:icon="@drawable/baseline_notification_important_black_24"
            android:title="@string/navigation_drawer_notifications" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/nav_drawer_bottom_menu"
        >
        <item
            android:id="@+id/activity_main_drawer_help"
            android:icon="@drawable/baseline_help_black_24"
            android:title="@string/navigation_drawer_help" />
        <item
            android:id="@+id/activity_main_drawer_about"
            android:icon="@drawable/baseline_info_black_24"
            android:title="@string/navigation_drawer_about" />
    </group>
</menu>