<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.deguffroy.adrien.mynews.Controllers.SearchArticlesActivity"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_hint"
            android:id="@+id/search_editText"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edittext_begin_date"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/search_begin_date"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="date"
                    android:drawableEnd="@drawable/baseline_arrow_drop_down_black_24"
                    android:layout_marginBottom="10dp"
                    />

                <CheckBox
                    android:id="@+id/search_articles_arts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_arts"
                    />

                <CheckBox
                    android:id="@+id/search_articles_business"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_business"
                    />

                <CheckBox
                    android:id="@+id/search_articles_entrepreneurs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_entrepreneurs"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edittext_end_date"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/search_end_date"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="date"
                    android:drawableEnd="@drawable/baseline_arrow_drop_down_black_24"
                    android:layout_marginBottom="10dp"
                    />

                <CheckBox
                    android:id="@+id/search_articles_politics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_politics"
                    />

                <CheckBox
                    android:id="@+id/search_articles_sports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_sports"
                    />

                <CheckBox
                    android:id="@+id/search_articles_travel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_travel"
                    />

            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_search"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
           />
    </LinearLayout>
</LinearLayout>
