<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.deguffroy.adrien.mynews.Controllers.HelpActivity"
    android:orientation="vertical"
    >

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/help_text_view"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_label_subject"
            />

        <EditText
            android:id="@+id/help_activity_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@layout/rounded_border_edittext"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            />

        <EditText
            android:id="@+id/help_activity_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/help_edit_text_hint"
            android:background="@layout/rounded_border_edittext"
            android:minHeight="55dp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:id="@+id/help_activity_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/help_text_button_submit"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            />

    </LinearLayout>

</LinearLayout>
